# pypld

./: LICENSE  flake.nix  pyproject.toml
pypld/: big_step.py  calc_big.py  calc_small.py  relation.py  syntax.py
src/pypld/: calc_big.py  calc_small.py  context.py  relation.py  syntax.py  utils.py
tests/: test_relation.py
